# bspparser

./: Cargo.toml  README.md
.github/workflows/: test.yml
benches/: bench_lib.rs
src/: bsp.rs  entities.rs  entity.rs  helpers.rs  ioextra.rs  lib.rs  parse.rs  worldspawn.rs
tests/files/: dm3_gpl.entities  povdmm4.entities
