[package]
name = "bspparser"
description = "Parse Quake .bsp files"
categories = ["parsing"]
keywords = ["bsp", "maps", "parser", "quake", "quakeworld"]
repository = "https://github.com/vikpe/bspparser"
authors = ["Viktor Persson"]
version = "0.7.0"
edition = "2021"
license = "MIT"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]

[dependencies]
anyhow = "1.0.86"
binrw = "0.14.1"
quake_text = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

# uncomment and run "cargo update" to enable benchmarks
criterion = { version = "0.5.1", default-features = false }

[[bench]]
name = "bench_lib"
harness = false
